--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -47,17 +47,15 @@ img {
 }
 
 @keyframes bounce {
-    from {
-        transform:
-            translateY(-10px);
-    }
-
-    to {
-        transform: translateY(10px);
-
-    }
-
-
+   0%{
+    transform:translateY(0);
+  }
+  50%{
+    transform: translateY(-15px);
+  }
+  100%{
+    transform: translateY(0);
+  }
 }
 
 
