--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -4,3 +4,14 @@ section {
     position: relative;
     margin-top: 10vh;
 }
+.experience_content{
+    display: block;
+margin-left: auto;
+margin-right: auto;
+}
+.experience_cards{
+       display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    
+}
