--- a/src/index.scss
+++ b/src/index.scss
@@ -132,11 +132,103 @@ a:hover {
     background: var(--color-primary);
     color: var(--color-background);
 }
+.title{
+    margin-bottom: 10vh;
+}
 
 img {
     display: img;
     width: 100%;
 
+}
+section {
+    text-align: center;
+    height: 100%;
+    position: relative;
+   
+}
+
+.container {}
+.cards_container_experience{
+   display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px; 
+}
+.link-icon{
+    font-size: 25px;
+}
+
+.cards_container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.list-group-item {
+    background-color: transparent;
+    color: white;
+    border: transparent;
+}
+.card{
+    background-color: rgba(0, 0, 0, 0.3) !important;
+
+}
+.card:hover{
+     background: transparent !important;
+    border-color: whitesmoke !important;
+}
+
+.card-icon-title {
+    background-color: rgb(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+
+.icon_card {
+    margin-top: 5px;
+    width: 100%;
+        margin-right: auto;
+    margin-left: auto;
+    height: 30px;
+    background-color: red;
+    max-width: 100%;
+    width: 30px;
+    background: #00add5;
+    margin-bottom: 5px;
+    border-radius: 50px;
+    vertical-align: auto;
+    padding: 2px;
+
+
+}
+.icon_style{
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: 10px;
+}
+
+h4 {
+    margin: 0;
+}
+
+
+
+.card {
+
+    border: 1px solid white;
+    
+    max-height: 600px;
+    min-height: 300px;
+    border-radius: 10px;
+    background-color: transparent;
+    text-align: center;
+    padding: 20px;
+
+}
+
+.card .card-title {
+    height: 30px;
+    margin: 5px;
 }
 
 /* Media tablets */
@@ -148,6 +240,8 @@ img {
     section {
         margin-top: 6rem;
     }
+    
+  
 
 }
 
@@ -169,13 +263,27 @@ img {
         display: none;
     }
 }
+@media screen and (max-width:500px){
+.sidebar{
+    width: 500px;
+}
+}
 
 @media screen and (max-width:1024px) {
+.cards_container{
+    display: inline;
+}
+.cards_container_experience{
+     display: inline;
+}
 
 
 
     .about_me {
         width: 50%;
         margin: 2rem auto 4rem;
+    }
+    .card{
+        margin: 20px 20px;
     }
 }
